make triggerUpdate() call slotUpdate() directly, remove the timer

since the timer calls slotUpdate() immediately, we can also remove the timer completely and call the slot manually from within triggerUpdate(), so no API change will be done.
This seems to fix the problem that sometimes a thumbnail in the filmstrip isn't shown correctly.
Maybe we don't even need triggerUpdate() anymore, but if we want to do additional processing in there, this is the best solution right now that doesn't change any program logic.

BUG:167320

svn path=/trunk/extragear/graphics/digikam/; revision=873272